updated versions of all dependencies